2007-04-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	* src/Makefile.am:
	- Made yelp-man-parser use yelp-debug

2007-04-11  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-io-channel.c:
	- Added back the GError convenience functions

	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	- Getting the man stuff to work in the new world order

	* src/yelp-transform.c:
	- Added a cast to shut gcc up

	* src/test-document.c:
	* src/yelp-document.h:
	* src/yelp-docbook.c:
	* src/yelp-docbook.h:
	* src/yelp-page.c:
	* src/yelp-page.h:
	- Moving much of the request-handling to YelpDocument

2007-04-04  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-error.c:
	* src/yelp-error.h:
	- Added yelp_error_copy

	* src/yelp-transform.c:
	- Added a few debug statements

	* src/test-transform.c:
	- Added the --random-timeout option

	* src/yelp-page.c:
	- Don't use g_free with memory slicese.

	* src/yelp-docbook.c:
	* src/yelp-docbook.h:
	* src/yelp-document.c:
	* src/yelp-document.h:
	- Added a more-or-less complete YelpDocument implementation for DocBook

	* src/test-document.c:
	* src/Makefile.am:
	- Added a test program for YelpDocument, currently only using DocBook

2007-03-22  Shaun McCance  <shaunm@gnome.org>

	* src/test-transform.c:
	* src/yelp-transform.c:
	* src/yelp-transform.h:
	- Do not do callbacks if released

	* src/yelp-page.h:
	- Added a comment

	* src/yelp-document.c:
	* src/yelp-document.h:
	- Filled out the abstract functions

	* src/Makefile.am:
	- Some changes to the test programs we build

2007-03-20  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-transform.c:
	- Added some locks

	* src/Makefile.am:
	* src/test-page.c:
	- Adding a test application for YelpPage

	* src/yelp-page.c:
	* src/yelp-page.h:
	- Fairly complete YelpPage for strings

	* src/yelp-document.c:
	* src/yelp-document.h:
	- Big not-yet-done changes, but needed for test-page
